--- a/CV.qmd
+++ b/CV.qmd
@@ -1,7 +1,8 @@
 ---
-title: "CV"
-author: "Tim Sippel"
-format: html
+title: "Tim Sippel"
+#author: "Tim Sippel"
+format: pdf
+  #style: styles/CV_Style.css
 editor: visual
 bibliography: bibliography/Publications_reports_presentations.bib
 ---
@@ -35,25 +36,11 @@ input_prof_service<-read_sheet("https://docs.google.com/spreadsheets/d/19s1p6Xr7
 input_prof_skills<-read_sheet("https://docs.google.com/spreadsheets/d/19s1p6Xr73FTJmM69JTP5Jn807aG1K8VPsoimNpXw3xw/edit", sheet = "Skills & Qualifications")
 ```
 
-## Quarto
-
-This is a test [@francis-2023],[@carvalho-2016], @sippel-2024A
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this
-
 ```{r}
 #| echo: false
-2 * 2
-```
+#| warning: false
+#| include: false
 
-The `echo: false` option disables the printing of code (only output is displayed).
+
+
+```
